solucion de reto leccion 24 antes de ver el video yuju

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ body {
 }
 /*#############################*/
 /*############################*/
-#selectPetPlayer {
+#selectPet {
   text-align: center;
 }
 #titleProyect {
@@ -43,7 +43,7 @@ body {
 }
 /*#############################*/
 /*############################*/
-#selectButton {
+#buttonSelect {
   font-family: Arial;
   font-weight: bold;
   color: #ececec !important;
