--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,6 +30,12 @@ body {
   font-size: 20px;
   text-shadow: 1px 1px 1px #000000;
 }
+#viewAttackPlayer {
+  color: #ffffff;
+  font-size: 20px;
+  text-shadow: 1px 1px 1px #000000;
+}
+
 #atackRandomEnemy {
   color: #ffffff;
   font-size: 20px;
