--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,23 @@ body {
 }
 /*#############################*/
 /*############################*/
-#selectPet {
-  text-align: center;
-}
 #titleProyect {
   text-align: center;
 }
+#titleSelectPet {
+  text-align: center;
+}
+#selectPet {
+  text-align: center;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+#sectionButtonSelect {
+  text-align: center;
+}
+
 #selectAttack {
   text-align: center;
 }
@@ -151,3 +162,78 @@ body {
   background: #ffbd7a;
   background: linear-gradient(to top, #ffbd7a, #804517);
 }
+
+.card {
+  width: 190px;
+  height: 254px;
+  background: #07182e;
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+.card h2 {
+  z-index: 1;
+  color: white;
+  font-size: 2em;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  background-image: linear-gradient(
+    180deg,
+    rgb(0, 183, 255),
+    rgb(255, 48, 255)
+  );
+  height: 130%;
+  animation: rotBGimg 3s linear infinite;
+  transition: all 0.2s linear;
+}
+
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.card::after {
+  content: "";
+  position: absolute;
+  background: #07182e;
+  inset: 5px;
+  border-radius: 15px;
+}
+
+/*
+.titulo {
+  color: hotpink;
+  width: 310px;
+  height: 50px;
+  background-color: teal;
+}
+#seleccionar-mascota {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.tarjeta-de-mokepon {
+  width: 100px;
+  height: 100px;
+  background: #7fffd4;
+  padding: 10px;
+  box-sizing: border-box;
+}
+input {
+  display: none;
+}
+*/
