--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@300&display=swap");
+
 body {
-  background-color: #539dcf;
-  text-shadow: 1px 1px 0px #000000;
+  background-color: #4d5153;
+
   font-family: Arial, Helvetica, sans-serif;
   font-variant-position: super;
+  font-family: "Fredoka One", cursive;
+}
+input {
+  display: none;
 }
 /*#############################*/
 /*############################*/
 #titleProyect {
   text-align: center;
+  font-size: 40px;
+  text-shadow: 2px 2px 2px #f7ba2b;
 }
 #titleSelectPet {
   text-align: center;
+  text-shadow: 2px 2px 2px #f7ba2b;
 }
 #selectPet {
   text-align: center;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 15px;
 }
 #sectionButtonSelect {
   text-align: center;
@@ -162,55 +172,64 @@ body {
   background: #ffbd7a;
   background: linear-gradient(to top, #ffbd7a, #804517);
 }
+/*##########################
+###########################*/
 
 .card {
-  width: 190px;
-  height: 254px;
-  background: #07182e;
+  --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
+  width: 170px;
+  height: 150px;
+  padding: 5px;
+  border-radius: 1rem;
+  overflow: visible;
+  background: #f7ba2b;
+  background: var(--background);
   position: relative;
-  display: flex;
-  place-content: center;
-  place-items: center;
-  overflow: hidden;
-  border-radius: 20px;
-}
-
-.card h2 {
   z-index: 1;
-  color: white;
-  font-size: 2em;
-}
-
-.card::before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  background-image: linear-gradient(
-    180deg,
-    rgb(0, 183, 255),
-    rgb(255, 48, 255)
-  );
-  height: 130%;
-  animation: rotBGimg 3s linear infinite;
-  transition: all 0.2s linear;
-}
-
-@keyframes rotBGimg {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .card::after {
-  content: "";
   position: absolute;
-  background: #07182e;
-  inset: 5px;
-  border-radius: 15px;
+  content: "";
+  top: 30px;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  transform: scale(0.8);
+  filter: blur(25px);
+  background: #f7ba2b;
+  background: var(--background);
+  transition: opacity 0.5s;
+}
+
+.card-info {
+  --color: #181818;
+  background: var(--color);
+  color: var(--color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  border-radius: 0.7rem;
+}
+
+.card .title {
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+
+/*Hover*/
+.card:hover::after {
+  opacity: 0;
+}
+
+.card:hover .card-info {
+  color: #f7ba2b;
+  transition: color 1s;
 }
 
 /*
