--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,19 @@ body {
 input {
   display: none;
 }
+
+#mainSection {
+  margin: 0 auto;
+  align-items: center;
+  border-radius: 20px;
+  background-image: url("/home/kikilma/Documentos/Practicas_Dev/kikiplay/assets/fondo1.png");
+  display: flex;
+  background-size: cover;
+  flex-direction: column;
+  width: 600px;
+  height: 535px;
+  border: 1px solid #c3c3c3;
+}
 /*#############################*/
 /*############################*/
 #titleProyect {
@@ -22,7 +35,6 @@ input {
   text-shadow: 2px 2px 2px #f7ba2b;
 }
 #selectPet {
-  text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -35,6 +47,9 @@ input {
 
 #selectAttack {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
 }
 #petPlayer {
   color: #ffffff;
@@ -163,24 +178,6 @@ button:hover:before {
   background: linear-gradient(to top, #46cf5d, #b2ee63);
 }
 
-#buttonFire {
-  font-family: arial;
-  font-weight: bold;
-  color: #fcfffd !important;
-  font-size: 14px;
-  text-shadow: 1px 1px 0px #000000;
-  box-shadow: 0px 2px 6px #000000;
-  padding: 9px 19px;
-  border-radius: 10px;
-  border: 2px solid #000000;
-  background: #eeee21;
-  background: linear-gradient(to top, #eeee21, #cf0000);
-}
-#buttonFire:hover {
-  color: #ffffff !important;
-  background: #cf0000;
-  background: linear-gradient(to top, #cf0000, #eeee21);
-}
 #buttonWater {
   font-family: arial;
   font-weight: bold;
@@ -278,27 +275,64 @@ button:hover:before {
   transition: color 1s;
 }
 
-/*
-.titulo {
-  color: hotpink;
-  width: 310px;
+buttonF {
+  width: 150px;
   height: 50px;
-  background-color: teal;
-}
-#seleccionar-mascota {
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  background: red;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+  background: #e62222;
 }
-.tarjeta-de-mokepon {
-  width: 100px;
-  height: 100px;
-  background: #7fffd4;
-  padding: 10px;
-  box-sizing: border-box;
+
+buttonF,
+buttonF span {
+  transition: 200ms;
 }
-input {
-  display: none;
+
+buttonF .text {
+  transform: translateX(35px);
+  color: white;
+  font-weight: bold;
 }
-*/
+
+buttonF .icon {
+  position: absolute;
+  border-left: 1px solid #c41b1b;
+  transform: translateX(110px);
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+buttonF svg {
+  width: 15px;
+  fill: #eee;
+}
+
+buttonF:hover {
+  background: #ff3636;
+}
+
+buttonF:hover .text {
+  color: transparent;
+}
+
+buttonF:hover .icon {
+  width: 150px;
+  border-left: none;
+  transform: translateX(0);
+}
+
+buttonF:focus {
+  outline: none;
+}
+
+buttonF:active .icon svg {
+  transform: scale(0.8);
+}
