--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
+/*#############################*/
+/*############################*/
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@300&display=swap");
-
+/*#############################*/
+/*############################*/
 body {
   background-color: #4d5153;
 
@@ -7,10 +10,13 @@ body {
   font-variant-position: super;
   font-family: "Fredoka One", cursive;
 }
+/*#############################*/
+/*############################*/
 input {
   display: none;
 }
-
+/*#############################*/
+/*############################*/
 #mainSection {
   margin: 0 auto;
   align-items: center;
@@ -30,11 +36,15 @@ input {
   font-size: 40px;
   text-shadow: 2px 2px 2px #f7ba2b;
 }
+/*#############################*/
+/*############################*/
 #titleSelectPet {
   text-align: center;
   text-shadow: 2px 2px 2px #f7ba2b;
   font-size: 20px;
 }
+/*#############################*/
+/*############################*/
 #selectPet {
   display: flex;
   flex-direction: row;
@@ -42,57 +52,77 @@ input {
   align-items: center;
   gap: 15px;
 }
+/*#############################*/
+/*############################*/
 #sectionButtonSelect {
   text-align: center;
 }
-
+/*#############################*/
+/*############################*/
 #selectAttack {
   text-align: center;
   display: flex;
   flex-direction: row;
   gap: 20px;
+  text-shadow: 2px 2px 2px #f7ba2b;
 }
+/*#############################*/
+/*############################*/
 #petPlayer {
-  color: #f7ba2b;
+  color: #ffffff;
   font-size: 20px;
   text-shadow: 1px 1px 1px #000000;
 }
+/*#############################*/
+/*############################*/
 #lifePetPlayer {
   color: #f7ba2b;
   font-size: 20px;
   text-shadow: 1px 1px 1px #000000;
 }
+/*#############################*/
+/*############################*/
 #petEnemy {
-  color: #f7ba2b;
+  color: #ffffff;
   font-size: 20px;
   text-shadow: 1px 1px 1px #000000;
 }
+/*#############################*/
+/*############################*/
 #viewAttackPlayer {
   color: #f7ba2b;
   font-size: 20px;
   text-shadow: 1px 1px 1px #000000;
 }
-
+/*#############################*/
+/*############################*/
 #atackRandomEnemy {
   color: #f7ba2b;
   font-size: 20px;
   text-shadow: 1px 1px 1px #000000;
 }
+/*#############################*/
+/*############################*/
 #lifePetEnemy {
   color: #f7ba2b;
   font-size: 20px;
   text-shadow: 1px 1px 1px #000000;
 }
+/*#############################*/
+/*############################*/
 #messages {
-  text-align: center;
-}
-#reset {
   text-align: center;
 }
 /*#############################*/
 /*############################*/
+#reset {
+  text-align: center;
+}
 
-/* === removing default button style ===*/
+/*############################*/
+/* button styling trasparent*/
+/*############################*/
+
 #buttonSelect {
   cursor: pointer;
   margin: 0;
@@ -100,10 +130,7 @@ input {
   background: transparent;
   padding: 0;
   border: none;
-}
 
-/* button styling */
-#buttonSelect {
   --border-right: 6px;
   --text-stroke-color: rgba(3, 3, 2, 0.863);
   text-shadow: 0px 0px 0px #f7ba2b;
@@ -117,33 +144,35 @@ input {
   color: transparent;
   -webkit-text-stroke: 2px var(--text-stroke-color);
 }
-/* this is the text, when you hover on button */
-
-/* hover */
 
 /*##############################
+button Reset Play
 ##############################*/
 
 #buttonReset {
-  font-family: Arial;
-  font-weight: bold;
-  color: #ffffff !important;
-  font-size: 20px;
-  text-shadow: 1px 1px 0px #7cacde;
-  box-shadow: 1px 1px 1px #bee2f9;
-  padding: 10px 25px;
-  border-radius: 10px;
-  border: 2px solid #000000;
-  background: #397c12;
-  background: linear-gradient(to top, #63b8ee, #468ccf);
-}
-#buttonReset:hover {
-  color: #130d0f;
-  background: #46cf9b;
-  background: linear-gradient(to top, #46cf5d, #b2ee63);
+  cursor: pointer;
+  margin: 0;
+  height: auto;
+  background: transparent;
+  padding: 0;
+  border: none;
+
+  --border-right: 6px;
+  --text-stroke-color: rgba(3, 3, 2, 0.863);
+  text-shadow: 0px 0px 0px #f7ba2b;
+  --fs-size: 2em;
+  letter-spacing: 3px;
+  text-decoration: none;
+  font-size: var(--fs-size);
+  font-family: "Fredoka One", cursive;
+  position: relative;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 2px var(--text-stroke-color);
 }
 
 /*##########################
+select Pet
 ###########################*/
 
 .card {
@@ -205,6 +234,7 @@ input {
 }
 
 /*##########################
+button General
 ##########################*/
 
 button {
@@ -303,4 +333,91 @@ button:active
   span:nth-child(2) {
   transition: none;
   transition-delay: none;
+}
+
+/* view attack, pet and live */
+/* view attack, pet and live */
+
+.card2 {
+  --width: 190px;
+  --height: 210px;
+  --primary: #00b9ae;
+  --text: #f9f9f9b2;
+  --secondary: #f9f9f933;
+  --radius: 20px;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  width: var(--width);
+  height: var(--height);
+  background: linear-gradient(
+      180deg,
+      rgba(22, 24, 30, 0) 0%,
+      rgba(22, 24, 30, 0.7) 65.28%
+    ),
+    linear-gradient(0deg, rgba(22, 24, 30, 0.4), rgba(22, 24, 30, 0.4));
+  background-size: cover;
+  border-radius: var(--radius);
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+  padding: 1em;
+  padding-top: 1.4em;
+}
+
+.card2 .card__title {
+  margin: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-top: 0.2rem;
+}
+
+.rating {
+  margin-top: 0.5em;
+  width: 85px;
+  height: 16px;
+  background-image: url("");
+  background-repeat: space;
+}
+
+.card2 .card__info {
+  display: flex;
+  margin-top: auto;
+  font-size: 0.8rem;
+  color: var(--text);
+  font-weight: 400;
+  justify-content: space-between;
+}
+
+.card2 .card__btns {
+  display: flex;
+  gap: 0.6rem;
+}
+
+.card2 button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  background: var(--primary);
+  color: #fff;
+  border-radius: var(--radius);
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  transition: 0.2s;
+}
+
+.card2 button:hover {
+  opacity: 0.8;
+  transform: scale(0.9);
+}
+
+.card2 .add-btn {
+  color: #fff;
+  padding: 0.5em 0.8em;
+  background: rgba(249, 249, 249, 0.2);
+  border-radius: 14px;
+}
+
+.card2 .watch-btn {
+  flex: 1;
 }
